--- a/index.html
+++ b/index.html
@@ -6,13 +6,30 @@
     </h1>   
     </head>
 <body>
+     <h2>
+          A Good Visual
+          </h2>
 <img src="inu.jpg" alt="Hockey stick">
     <p>
-    The hockey stick chart is portraying information with more clarity, as you can easily conclude the data from this chart quite easily. In addition, this chart is less misleading comparative to other charts, as it conveys data with honesty. Moreover, the chart is aesthetically more pleasing than other charts, as it gives only the required information and does not confuse the viewer with a lot of information. The steepness of the slope and the movement of the graph depicts the trend in a manner which can be understood by a layman. 
+    The hockey stick chart is portraying information with more clarity, as you can easily conclude the data from this chart quite easily. In addition, this chart is less misleading comparative to other charts, as it conveys data with honesty. Moreover, the chart is aesthetically more pleasing than other charts, as it gives only the required information and does not confuse the viewer with a lot of information. The steepness of the slope and the movement of 
+         the graph depicts the trend in a manner which can be understood by a layman. 
+         Moreover, this visual functional in the sense that anybody can look at it and extract information from it, and make conclusion on the data that 
+         is represented by the figure. This visual shows a good relationship between two variables and makes a good comparsion on how a change in our 
+         independent
+         variable, causes a change in the dependent variable.
+        
     </p>
+     <h2>
+          A Bad Visual
+          </h2>
     <img src="in.jpg" alt="Pie chart">
     <p>
-    Whereas, the Pie chart does not provide any information about the world population in 1939, it just gives us an idea about who had the greater share of population in the world at that time. Other than that, it does provide us with any figure or data about how much population each country had. It is extremely hard to conclude any useful information from this pie chart. Moreover, it is not enlightening at all as it does provide any knowledge on the world population 
-    </p>
+    Whereas, the Pie chart does not provide any information about the world population in 1939, 
+         it just gives us an idea about who had the greater share of 
+         population in the world at that time. Other than that, it does provide us with any figure or data about how much population each country had. It is extremely hard to conclude any useful information from this pie chart. Moreover, it is not enlightening at all as it does provide any knowledge on the world population 
+   This visual in not functional at all, as nothing can be proved by this chart, expect the fact that some countries have a bigger population
+         share than others.  Furthermore, this chart does not make any kind of comparison or on how population has changed over time, it just
+         shows which country had a higher population, which is no use in today's time.
+     </p>
 </body>
 </html>
